--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "debug": "~0.7.2",
     "familysearch": "*",
     "lodash": "~1.3.1"
+  },
+  "devDependencies": {
+    "jshint": "~2.1.8"
   }
 }
