--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express": "~3.2.6",
     "jade": "~0.31.2",
     "component-builder": "~0.8.3",
-    "component-stylus": "~1.1.3",
+    "component-stylus-plugin": "git+https://github.com/jaredly/component-stylus-plugin#0.2.5",
     "component": "~0.17.0",
     "mongodb": "~1.3.10",
     "superagent": "~0.14.9",
