--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node": "git://github.com/jabapyth/node-oauth.git",
     "js-yaml": "~2.1.0",
     "debug": "~0.7.2",
-    "familysearch": "*",
+    "familysearch": "0.0.4",
     "lodash": "~1.3.1"
   },
   "devDependencies": {
