--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -3,3 +3,4 @@ OAUTH_SECRET:
 HOST: <the hostname you'll be serving up. needed for OAuth>
 SECRET: <some random string of chars. used for secure cookies, etc.>
 PORT: 3000
+MONGO: mongodb://....
