--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "js-yaml": "~2.1.0",
     "debug": "~0.7.2",
     "familysearch": "0.0.5",
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
-    "jshint": "~2.1.8"
+    "jshint": "~2.1.8",
+    "expect.js": "~0.2.0"
   }
 }
