--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "debug": "~0.7.2",
     "familysearch": "0.0.5",
     "lodash": "~1.3.1",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "jshint": "~2.1.8",
